# kademlia-blockchain-auction-system

./: .env  .gitignore  Cargo.toml  README.md  build.rs  explanation.txt
proto/: kademlia.proto
scripts/: start_network.sh
src/: auction.rs  blockchain.rs  command.rs  consensus.rs  gRPC.rs  g_rpc.rs  main.rs  node.rs  routing.rs  storage.rs  utils.rs
src/blockchain/: address.rs  block.rs  transaction.rs
src/gRPC/: client.rs  server.rs
src/g_rpc/: client.rs  server.rs
src/routing/: kbucket.rs  routing_table.rs
src/utils/: config.rs  context.rs  crypto_own.rs  execution.rs
