[package]
name = "kademlia-blockchain-auction"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.1.0"
anyhow = "1.0.58"
crossbeam-utils = "0.8.10"
chrono = { version = "0.4.40", features = ["serde"]}
ctrlc = { version = "3.2.2", features = ["termination"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
env_logger = "0.9.0"
ethereum-types = "0.13.1"
local-ip-address = "0.6.2"
log = "0.4.17"
openssl = "0.10.71"
prost = "0.13.5"
prost-types = "0.13.5"
rand = "0.8"
rust-crypto = "0.2.36"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
sha2 = "0.10"
thiserror = "1.0.31"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.17"
tonic = { version = "0.12.3", features = ["transport"] }
url = "2.5"

[build-dependencies]
tonic-build = "0.12.3"